barebones matrix connecting+room list, loading animation

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,5 +1,6 @@
 $fg: #dedede;
 $bg: #1d1f21;
+$anim_color: #fff;
 
 .light {
     display: none;
@@ -51,3 +52,16 @@ html {
         }
     }
 }
+
+.orbit-spinner .orbit:nth-child(1) {
+    border-bottom: 3px solid $anim_color;
+}
+
+.orbit-spinner .orbit:nth-child(2) {
+    border-right: 3px solid $anim_color;
+}
+
+.orbit-spinner .orbit:nth-child(3) {
+    border-top: 3px solid $anim_color;
+}
+
