--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -40,7 +40,6 @@ html, body {
 
         label {
             height: 70px;
-            width: 100%;
             cursor: pointer;
             display: block;
             padding: 10px;
@@ -59,6 +58,12 @@ html, body {
                 padding: 10px;
                 padding-left: 80px;
                 white-space: nowrap;
+            }
+
+            .timestamp {
+                position: absolute;
+                top: 10px;
+                right: 10px;
             }
         }
     }
