--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -65,12 +65,16 @@ html, body {
                 padding: 10px;
                 padding-top: 0;
                 padding-left: 80px;
+                position: absolute;
+                width: 80%;
+                overflow: hidden;
             }
 
             .timestamp {
                 position: absolute;
-                top: 10px;
-                right: 10px;
+                padding: 10px;
+                top: 0;
+                right: 0;
             }
         }
     }
